# c-homework

./: .gitignore  CMakeLists.txt  README.md  makefile-old  matrice.c  matrice.h
custom/: pi.c
td6/: chained_list.c  exo.c
tp2/: bissextile.c  comptage.c  etoiles.c  moy.c  times.c
tp3/: matrice.c  serie.c  text.c  text_normal.c
tp4/: duration.c  sort.c
tp5/: exo1.c  exo2.c
tp6/: exo1.c
tp8/: chien_rotation.pgm  image.c  image.h  main.c  makefile  tp8exo1.c  tp8exo2.c
